css/style.css
/* ... */
.heading-primary:span {
  color: var(#777);
}

.heading-secondary {
  font-size: 4rem;
  font-weight: 550;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading-secondary.bg {
  font-size: 4.5rem;
  font-weight: 550;
  text-align: center;
}

.heading-tertiary {
  font-size: 2rem;
  font-weight: bold;
  text-transform: capitalize;
  line-height: 1.2;
  margin: 1rem;
  margin-left: 0;
}

.heading-tertiary span {
  color: var(--secondary-color);
}

.heading-university {
  font-size: 1.9rem;
}

.paragraph {
  font-size: 1.6rem;
  line-height: 1.6;
  margin-bottom: 2rem;
  text-align: center;
  width: 62%;
  margin: 0 auto;
}

.paragraph_small {
  font-size: 1.4rem;
  line-height: 1.6;
  margin-bottom: 2rem;
  width: 90%;
}

.paragraph_right {
  font-size: 1.6rem;
  line-height: 1.6;
  margin-bottom: 2rem;

  width: 90%;
}

/* UTILITIES */
.center-children {
  padding-left: 8vw !important;
  padding-right: 8vw !important;
}

/* NAVIGATION */
.navigation {
  padding: 3rem 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 0.8px solid var(--span-color);
  cursor: pointer;
}

.navigation ul,
a {
  color: #000000;
}

.navigation .logo {
  flex: 0.3;
  flex-shrink: 0;
  width: 2.5rem;
  height: 2.5rem;
  display: flex;
  justify-content: center;
  vertical-align: center;
}

.navigation ul.nav_list {
  display: flex;
  justify-content: center;
  align-items: center;
  list-style: none;
  text-decoration: none;
  font-size: 1.3rem;
  cursor: pointer;
  font-weight: bold;
  gap: 5rem;
}

.navigation ul.nav_list li a {
  text-decoration: none;
}
.navigation .nav_actions.a {
  gap: 0rem;
}

.navigation #checkbox {
  display: none;
}

.navigation .nav_button {
  display: none;
}

/* HEADER */

.header.center-children {
  margin-top: 5rem;
}

.header .btn_wrapper {
  text-align: center;
  display: flex;
  justify-content: center;
  gap: 1rem;
  margin-bottom: 5rem;
}

.header .btn_wrapper .btn.blue {
  background-color: #1465ff;
  color: #ffffff;
  border: none;
}

.header .btn_wrapper .btn.bold {
  font-weight: bold;
}

.header .composition.hero {
  display: flex;
  gap: 1.5rem;
  margin-bottom: 4rem;
}

.header .composition.hero .composition {
  width: 45rem;
  height: 50rem;
}

.header .composition.hero .composition img {
  width: 100%;
  height: 100%;
  border-radius: 20px;
}

.header .composition.hero .composition.big {
  width: 100%;
  height: 50rem;
  object-fit: contain;
}

.header .composition.hero .composition.big img {
  border-radius: 20px;
}

/* SECTION MY_OFFERINGS */

.my-offerings.center-children {
  margin-top: 2rem;
}

.textbox_column {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  margin-top: 3.5rem;
  margin-bottom: 3rem;
  gap: 3rem;
}

.row {
  box-shadow: 1px 1px 1px 1px rgba(198, 195, 195, 0.6);
  border: #c6c3c399 1px solid;
  padding: 1rem 1.2rem;
  border-radius: 15px;
}

.icon {
  width: 3rem;
  height: 3rem;
  padding: 2.3rem 2.3rem;
  margin-top: 1rem;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgba(20, 101, 255, 0.6);
}

/* EXPERIENCE */

section.experience {
  margin-bottom: 3rem;
}

.wrapper {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 3rem;
  margin-bottom: 8rem;
  margin-top: 5rem;
}

.textbox .btn.blue {
  background-color: #1465ff;
  color: #ffffff;
  border: none;
}

section.experience .container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 6.5rem;
  width: 100%;
}

section.experience .btn_wrapper {
  display: block;
}

section.experience .composition {
  width: 100%;
  height: 40rem;
  margin: 3rem 0 3rem 0;
  object-fit: cover;
}

section.experience .composition img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 15px;
}

.paragraph_container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
  flex: 1;
}

.paragraph_container .paragraph_small {
  margin-bottom: 0;
}
section.experience .container.border .textbox {
  flex: 1;
}
section.experience .container.border {
  border-bottom: 0.6px solid var(--span-color);
  border-top: 0.6px solid var(--span-color);
  padding: 2rem;
  display: flex;
}

section.experience .container.border .btn_wrapper {
  display: flex;
  align-items: flex-start;
  align-items: center;
  justify-content: center;
}

/* MY-WORK */
/* section.my-work {
} */

section.my-work .container .textbox-wrapper {
  display: flex;

  align-items: center;
  padding: 1.3rem 1rem;
  margin-top: 3rem;
  border-bottom: 0.6px solid var(--span-color);
  border-top: 0.6px solid var(--span-color);
}

section.my-work .container .textbox-wrapper.active {
  background-color: #1465ff;
  border-radius: 15px;
}

.container .textbox-wrapper .textbox {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex: 4;
}

.container .textbox-wrapper .textbox .heading-secondardp {
  margin: 0;
  font-size: 1.5rem;
}

.digit {
  font-size: 2.5rem;
  font-weight: bold;
  flex: 1;
}

.active .digit {
  color: var(--primary-color);
}

.active .paragraph_small {
  margin-top: 1.5rem;
}

section.my-work .paragraph_small {
  margin-top: 1.5rem;
}

.active span {
  color: var(--primary-color);
}

.active .heading-tertiary.bold {
  color: var(--primary-color);
  font-size: 2.3rem;
}

.heading-tertiary.bold {
  font-size: 2.3rem;
}

.up-arrow {
  font-size: 1.5rem;
  font-weight: bold;
}

.up-arrow.image {
  font-size: 1.5rem;
  font-weight: bold;
  font-display: flex;
  background-color: var(--secondary-color);
}

.arrow-formard {
  font-size: 2.5rem;
}

/* LATEST */

section.latest .container.description {
  display: flex;
  gap: 3rem;
  margin-bottom: 5rem;
  justify-content: space-between;
}

section.latest .container .composition-1 {
  position: relative;
  height: 30rem;
  width: 40rem;
  border-radius: 15px;
  overflow: hidden;
}

section.latest .container .composition-1 img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}
/* ... */

